[TEST] get_depth_lcs & syn_distance

--- a/Esercizio 1/conceptual_similarity.ipynb
+++ b/Esercizio 1/conceptual_similarity.ipynb
@@ -16,125 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Word 1</th>\n",
-       "      <th>Word 2</th>\n",
-       "      <th>Human (mean)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>love</td>\n",
-       "      <td>sex</td>\n",
-       "      <td>6.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tiger</td>\n",
-       "      <td>cat</td>\n",
-       "      <td>7.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tiger</td>\n",
-       "      <td>tiger</td>\n",
-       "      <td>10.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>book</td>\n",
-       "      <td>paper</td>\n",
-       "      <td>7.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>computer</td>\n",
-       "      <td>keyboard</td>\n",
-       "      <td>7.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>shower</td>\n",
-       "      <td>flood</td>\n",
-       "      <td>6.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>weather</td>\n",
-       "      <td>forecast</td>\n",
-       "      <td>8.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350</th>\n",
-       "      <td>disaster</td>\n",
-       "      <td>area</td>\n",
-       "      <td>6.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>351</th>\n",
-       "      <td>governor</td>\n",
-       "      <td>office</td>\n",
-       "      <td>6.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>352</th>\n",
-       "      <td>architecture</td>\n",
-       "      <td>century</td>\n",
-       "      <td>3.78</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>353 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Word 1    Word 2  Human (mean)\n",
-       "0            love       sex          6.77\n",
-       "1           tiger       cat          7.35\n",
-       "2           tiger     tiger         10.00\n",
-       "3            book     paper          7.46\n",
-       "4        computer  keyboard          7.62\n",
-       "..            ...       ...           ...\n",
-       "348        shower     flood          6.03\n",
-       "349       weather  forecast          8.34\n",
-       "350      disaster      area          6.25\n",
-       "351      governor    office          6.34\n",
-       "352  architecture   century          3.78\n",
-       "\n",
-       "[353 rows x 3 columns]"
-      ]
+      "text/plain": "           Word 1    Word 2  Human (mean)\n0            love       sex          6.77\n1           tiger       cat          7.35\n2           tiger     tiger         10.00\n3            book     paper          7.46\n4        computer  keyboard          7.62\n..            ...       ...           ...\n348        shower     flood          6.03\n349       weather  forecast          8.34\n350      disaster      area          6.25\n351      governor    office          6.34\n352  architecture   century          3.78\n\n[353 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Word 1</th>\n      <th>Word 2</th>\n      <th>Human (mean)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>love</td>\n      <td>sex</td>\n      <td>6.77</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>tiger</td>\n      <td>cat</td>\n      <td>7.35</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>tiger</td>\n      <td>tiger</td>\n      <td>10.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>book</td>\n      <td>paper</td>\n      <td>7.46</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>computer</td>\n      <td>keyboard</td>\n      <td>7.62</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>348</th>\n      <td>shower</td>\n      <td>flood</td>\n      <td>6.03</td>\n    </tr>\n    <tr>\n      <th>349</th>\n      <td>weather</td>\n      <td>forecast</td>\n      <td>8.34</td>\n    </tr>\n    <tr>\n      <th>350</th>\n      <td>disaster</td>\n      <td>area</td>\n      <td>6.25</td>\n    </tr>\n    <tr>\n      <th>351</th>\n      <td>governor</td>\n      <td>office</td>\n      <td>6.34</td>\n    </tr>\n    <tr>\n      <th>352</th>\n      <td>architecture</td>\n      <td>century</td>\n      <td>3.78</td>\n    </tr>\n  </tbody>\n</table>\n<p>353 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -207,16 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "2"
-      ]
+      "text/plain": "0"
      },
-     "execution_count": 117,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +132,7 @@
     "                depth_lcs = len(path2[index_lcs].hypernym_paths()[0])\n",
     "            i = i + 1\n",
     "\n",
-    "        if (index_lcs != -1 and depth_lcs > best_depth_lcs):\n",
+    "        if index_lcs != -1 and depth_lcs > best_depth_lcs:\n",
     "            best_index_lcs = index_lcs\n",
     "            best_syn_lcs = path2[best_index_lcs]\n",
     "            best_depth_lcs = depth_lcs\n",
@@ -261,35 +149,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0"
-      ]
+      "text/plain": "0"
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_depth_lcs(syn1, syn2)"
+    "correct = True\n",
+    "for (syn1,syn2) in list(product(wn.all_synsets(),wn.all_synsets())):\n",
+    "    correct = (get_depth_lcs(syn1, syn2) in syn1.lowest_common_hypernyms(syn2)) & correct\n",
+    "    if syn1.shortest_path_distance(syn2) == get_depth_lcs(syn1, syn2):\n",
+    "        print('senso 1: ', syn1, ' senso 2: ',syn2)\n",
+    "print(correct)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "atteso:  11\n",
-      "trovato:  11\n"
+      "atteso:  None\n",
+      "trovato:  40\n"
      ]
     }
    ],
@@ -327,10 +218,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
-    "\n"
+    "correct = True\n",
+    "for (syn1,syn2) in list(product(wn.all_synsets(),wn.all_synsets())):\n",
+    "    correct = syn1.shortest_path_distance(syn2) == get_shortest_distance(syn1, syn2) & correct\n",
+    "    if not syn1.shortest_path_distance(syn2) == get_shortest_distance(syn1, syn2):\n",
+    "        print('senso 1: ', syn1, ' senso 2: ',syn2)\n",
+    "print(correct)"
    ]
   },
   {
