--- a/Esercizio 1/wsd.ipynb
+++ b/Esercizio 1/wsd.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,60 +62,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "divorce\n",
-      "Synset('divorce.n.01')\n",
-      "[Lemma('divorce.n.01.divorce')]\n",
+      "Mayor\n",
+      "Synset('mayor.n.01')\n",
+      "[Lemma('person.n.01.person')]\n",
       "-----------------\n",
-      "permit\n",
-      "Synset('license.n.01')\n",
-      "[Lemma('license.n.01.permit')]\n",
+      "Many\n",
+      "Synset('many.a.01')\n",
+      "[Lemma('many.a.01.many')]\n",
       "-----------------\n",
-      "jury\n",
-      "Synset('jury.n.01')\n",
-      "[Lemma('jury.n.01.jury')]\n",
+      "reports\n",
+      "Synset('report.n.02')\n",
+      "[Lemma('report.n.03.report')]\n",
       "-----------------\n",
-      "item\n",
-      "Synset('item.n.01')\n",
-      "[Lemma('detail.n.01.item')]\n",
+      "million\n",
+      "Synset('million.n.01')\n",
+      "[Lemma('million.n.01.million')]\n",
       "-----------------\n",
       "Felix\n",
       "None\n",
       "[Lemma('person.n.01.person')]\n",
       "-----------------\n",
-      "recommend\n",
-      "Synset('commend.v.04')\n",
-      "[Lemma('recommend.v.01.recommend')]\n",
+      "committee\n",
+      "Synset('committee.n.01')\n",
+      "[Lemma('committee_member.n.01.committee_member')]\n",
       "-----------------\n",
-      "burden\n",
-      "Synset('charge.v.18')\n",
-      "[Lemma('burden.n.01.burden')]\n",
+      "place\n",
+      "Synset('topographic_point.n.01')\n",
+      "[Lemma('put.v.01.place')]\n",
       "-----------------\n",
-      "give\n",
-      "Synset('give.n.01')\n",
-      "[Lemma('give.v.10.give')]\n",
+      "raises\n",
+      "Synset('raise.n.03')\n",
+      "[Lemma('raise.n.01.raise')]\n",
       "-----------------\n",
-      "work\n",
-      "Synset('work.n.05')\n",
-      "[Lemma('work.v.01.work')]\n",
-      "-----------------\n",
-      "escheat\n",
-      "Synset('escheat.n.01')\n",
-      "[Lemma('escheat.n.01.escheat')]\n",
-      "-----------------\n",
-      "allotted\n",
-      "Synset('accord.v.02')\n",
-      "[Lemma('accord.v.02.allot')]\n",
+      "visit\n",
+      "Synset('visit.n.02')\n",
+      "[Lemma('visit.n.01.visit')]\n",
       "-----------------\n",
       "committee\n",
       "Synset('committee.n.01')\n",
-      "[Lemma('committee.n.01.committee'), Lemma('subcommittee.n.01.subcommittee')]\n",
+      "[Lemma('committee.n.01.committee')]\n",
+      "-----------------\n",
+      "legislators\n",
+      "Synset('legislator.n.01')\n",
+      "[Lemma('legislator.n.01.legislator')]\n",
+      "-----------------\n",
+      "rules\n",
+      "Synset('principle.n.01')\n",
+      "[Lemma('rule.n.03.rule')]\n",
       "-----------------\n",
       "saw\n",
       "Synset('saw.v.01')\n",
@@ -125,103 +125,103 @@
       "Synset('fulton.n.01')\n",
       "[Lemma('location.n.01.location'), Lemma('location.n.01.location')]\n",
       "-----------------\n",
-      "believes\n",
-      "Synset('believe.v.01')\n",
-      "[Lemma('believe.v.03.believe')]\n",
+      "reduce\n",
+      "Synset('deoxidize.v.01')\n",
+      "[Lemma('reduce.v.01.reduce')]\n",
       "-----------------\n",
-      "said\n",
-      "Synset('aforesaid.s.01')\n",
-      "[Lemma('allege.v.01.say')]\n",
-      "-----------------\n",
-      "jury\n",
-      "Synset('jury.n.01')\n",
-      "[Lemma('jury.n.01.jury')]\n",
-      "-----------------\n",
-      "permit\n",
-      "Synset('let.v.01')\n",
-      "[Lemma('permit.v.01.permit')]\n",
-      "-----------------\n",
-      "wife\n",
-      "Synset('wife.n.01')\n",
+      "upon\n",
+      "None\n",
       "[]\n",
       "-----------------\n",
-      "City\n",
-      "Synset('city.n.03')\n",
-      "[Lemma('group.n.01.group')]\n",
+      "On\n",
+      "Synset('on.a.01')\n",
+      "[None]\n",
       "-----------------\n",
-      "voters\n",
-      "Synset('voter.n.01')\n",
-      "[Lemma('voter.n.01.voter')]\n",
+      "Fulton\n",
+      "Synset('fulton.n.01')\n",
+      "[Lemma('location.n.01.location')]\n",
       "-----------------\n",
-      "rescind\n",
-      "Synset('revoke.v.02')\n",
-      "[Lemma('revoke.v.02.rescind')]\n",
+      "said\n",
+      "Synset('suppose.v.01')\n",
+      "[Lemma('allege.v.01.say')]\n",
       "-----------------\n",
-      "Only\n",
-      "Synset('lone.s.03')\n",
-      "[Lemma('merely.r.01.only')]\n",
+      "personnel\n",
+      "Synset('personnel_department.n.01')\n",
+      "[Lemma('force.n.04.personnel'), Lemma('force.n.04.personnel')]\n",
+      "-----------------\n",
+      "force\n",
+      "Synset('force_out.n.01')\n",
+      "[Lemma('coerce.v.01.force')]\n",
+      "-----------------\n",
+      "day\n",
+      "Synset('sidereal_day.n.01')\n",
+      "[Lemma('monday.n.01.Monday'), Lemma('friday.n.01.Friday'), Lemma('day.n.01.day')]\n",
+      "-----------------\n",
+      "number\n",
+      "Synset('phone_number.n.01')\n",
+      "[Lemma('number.n.02.number')]\n",
       "-----------------\n",
       "Georgia\n",
       "Synset('georgia.n.02')\n",
       "[Lemma('georgia.n.01.Georgia')]\n",
       "-----------------\n",
-      "wanted\n",
-      "Synset('want.v.04')\n",
-      "[Lemma('desire.v.01.want')]\n",
+      "race\n",
+      "Synset('race.n.03')\n",
+      "[Lemma('race.n.01.race')]\n",
       "-----------------\n",
-      "Highway\n",
-      "Synset('highway.n.01')\n",
-      "[Lemma('group.n.01.group')]\n",
-      "-----------------\n",
-      "well\n",
-      "Synset('well.n.04')\n",
-      "[Lemma('well.r.01.well')]\n",
-      "-----------------\n",
-      "representing\n",
-      "Synset('represent.v.04')\n",
-      "[Lemma('represent.v.03.represent')]\n",
-      "-----------------\n",
-      "controversy\n",
-      "Synset('controversy.n.01')\n",
-      "[Lemma('controversy.n.01.controversy')]\n",
-      "-----------------\n",
-      "Davis\n",
-      "Synset('davis.n.05')\n",
+      "Garland\n",
+      "Synset('wreath.n.01')\n",
       "[Lemma('person.n.01.person')]\n",
       "-----------------\n",
-      "Marvin\n",
-      "None\n",
-      "[Lemma('person.n.01.person')]\n",
+      "accepted\n",
+      "Synset('bear.v.06')\n",
+      "['accepted.s.00']\n",
       "-----------------\n",
-      "trouble\n",
-      "Synset('trouble.n.01')\n",
-      "[Lemma('fuss.n.02.trouble')]\n",
+      "violate\n",
+      "Synset('desecrate.v.01')\n",
+      "[Lemma('transgress.v.01.violate')]\n",
       "-----------------\n",
-      "property\n",
-      "Synset('property.n.05')\n",
-      "[Lemma('property.n.01.property')]\n",
+      "phone\n",
+      "Synset('telephone.n.01')\n",
+      "[Lemma('call.n.01.phone_call')]\n",
       "-----------------\n",
-      "A\n",
-      "Synset('deoxyadenosine_monophosphate.n.01')\n",
-      "[None]\n",
+      "votes\n",
+      "Synset('vote.n.01')\n",
+      "[Lemma('vote.n.02.vote')]\n",
       "-----------------\n",
-      "become\n",
-      "Synset('become.v.01')\n",
-      "[Lemma('become.v.02.become')]\n",
+      "roads\n",
+      "Synset('roads.n.01')\n",
+      "[Lemma('road.n.01.road')]\n",
       "-----------------\n",
-      "mental\n",
-      "Synset('mental.a.01')\n",
-      "[Lemma('mental.a.02.mental')]\n",
+      "liquor\n",
+      "Synset('liquor.n.02')\n",
+      "[Lemma('liquor.n.01.liquor')]\n",
       "-----------------\n",
-      "recommendations\n",
-      "Synset('recommendation.n.01')\n",
-      "[Lemma('recommendation.n.01.recommendation')]\n",
+      "protests\n",
+      "Synset('protest.n.02')\n",
+      "[Lemma('protest.n.01.protest')]\n",
       "-----------------\n",
-      "issue\n",
-      "Synset('issue.n.04')\n",
-      "[Lemma('publish.v.02.issue')]\n",
+      "past\n",
+      "Synset('past.n.03')\n",
+      "[Lemma('past.n.01.past')]\n",
       "-----------------\n",
-      "would\n",
+      "coordinator\n",
+      "Synset('coordinator.n.01')\n",
+      "[Lemma('coordinator.n.01.coordinator')]\n",
+      "-----------------\n",
+      "charged\n",
+      "Synset('charge.v.01')\n",
+      "[Lemma('charge.v.06.charge')]\n",
+      "-----------------\n",
+      "committee\n",
+      "Synset('committee.n.01')\n",
+      "[]\n",
+      "-----------------\n",
+      "Meanwhile\n",
+      "Synset('interim.n.01')\n",
+      "[Lemma('meanwhile.r.01.meanwhile')]\n",
+      "-----------------\n",
+      "whether\n",
       "None\n",
       "[None, None]\n",
       "-----------------\n",
@@ -229,45 +229,45 @@
       "Synset('after.r.02')\n",
       "[None]\n",
       "-----------------\n",
-      "Committee\n",
-      "Synset('committee.n.01')\n",
-      "[Lemma('group.n.01.group')]\n",
+      "presentments\n",
+      "Synset('presentment.n.01')\n",
+      "[Lemma('presentment.n.01.presentment')]\n",
       "-----------------\n",
-      "roads\n",
-      "Synset('road.n.02')\n",
-      "[Lemma('road.n.01.road')]\n",
+      "bonds\n",
+      "Synset('bond.n.02')\n",
+      "[Lemma('bond.n.02.bond')]\n",
       "-----------------\n",
-      "picking\n",
-      "Synset('picking.n.01')\n",
-      "[Lemma('turn_around.v.03.pick_up')]\n",
+      "rally\n",
+      "Synset('rally.n.01')\n",
+      "[Lemma('rally.n.01.rally')]\n",
       "-----------------\n",
-      "enthusiastic\n",
-      "Synset('enthusiastic.a.01')\n",
-      "[Lemma('enthusiastic.a.01.enthusiastic')]\n",
+      "chairman\n",
+      "Synset('chair.v.01')\n",
+      "[Lemma('president.n.04.chairman')]\n",
       "-----------------\n",
-      "many\n",
-      "Synset('many.a.01')\n",
-      "[None]\n",
+      "inadequate\n",
+      "Synset('inadequate.a.01')\n",
+      "[Lemma('inadequate.a.01.inadequate')]\n",
       "-----------------\n",
-      "County\n",
-      "Synset('county.n.01')\n",
-      "[Lemma('location.n.01.location')]\n",
+      "funds\n",
+      "Synset('funds.n.01')\n",
+      "[Lemma('fund.n.01.fund')]\n",
       "-----------------\n",
-      "awarding\n",
-      "Synset('award.v.02')\n",
-      "[Lemma('award.n.01.awarding')]\n",
+      "guardians\n",
+      "Synset('defender.n.01')\n",
+      "[Lemma('defender.n.01.guardian')]\n",
       "-----------------\n",
-      "enter\n",
-      "Synset('enter.v.02')\n",
-      "[Lemma('enroll.v.01.enter')]\n",
+      "candidate\n",
+      "Synset('campaigner.n.01')\n",
+      "[Lemma('campaigner.n.01.candidate')]\n",
       "-----------------\n",
       "expires\n",
       "Synset('run_out.v.04')\n",
       "[Lemma('run_out.v.04.expire')]\n",
       "-----------------\n",
-      "It\n",
-      "Synset('information_technology.n.01')\n",
-      "[None]\n",
+      "revised\n",
+      "Synset('retool.v.01')\n",
+      "[Lemma('revise.v.01.revise')]\n",
       "-----------------\n"
      ]
     }
