annotazione deciding + restyling codice

--- a/Esercizio 2/FN_lab_SAFE.ipynb
+++ b/Esercizio 2/FN_lab_SAFE.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "'Medical_specialties'"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "\"This frame includes words that name medical specialties and is closely related to the Medical_professionals frame.  The FE Type characterizing a sub-are in a Specialty may also be expressed. 'Ralph practices paediatric oncology.'\""
       ]
      },
-     "execution_count": 123,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1373,7 @@
        "\"The Injury is the injurious action committed by the Offender against the Injured_Party. This Frame Element need not always be realized, although it is conceptually necessary.   'The team sought revenge for their 4-1 defeat last month.'\""
       ]
      },
-     "execution_count": 134,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
        "dict_keys(['avenge.v', 'avenger.n', 'vengeance.n', 'retaliate.v', 'revenge.v', 'revenge.n', 'vengeful.a', 'vindictive.a', 'retribution.n', 'retaliation.n', 'revenger.n', 'revengeful.a', 'retributive.a', 'get even.v', 'retributory.a', 'get back (at).v', 'payback.n', 'sanction.n'])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
        " 'Useful_location'}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1627,15 +1627,15 @@
      "output_type": "stream",
      "text": [
       "\tReFraming_Mapping\n",
+      "\tSee_also\n",
       "\tCausative_of\n",
-      "\tMetaphor\n",
       "\tPerspective_on\n",
-      "\tPrecedes\n",
-      "\tInheritance\n",
+      "\tSubframe\n",
+      "\tMetaphor\n",
       "\tUsing\n",
       "\tInchoative_of\n",
-      "\tSubframe\n",
-      "\tSee_also\n"
+      "\tInheritance\n",
+      "\tPrecedes\n"
      ]
     }
    ],
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1684,7 @@
        "[<Causative=Cause_to_make_noise -- Causative_of -> Inchoative/state=Make_noise>]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1969,12 +1969,12 @@
       "\tID:   58\tframe: Emptying\n",
       "\tID:  413\tframe: Performers_and_roles\n",
       "\n",
-      "student: TOMATIs\n",
-      "\tID: 2010\tframe: Hunting_success_or_failure\n",
-      "\tID:  425\tframe: Predicting\n",
-      "\tID:   36\tframe: Gesture\n",
-      "\tID: 1790\tframe: Means\n",
-      "\tID: 1346\tframe: Supply\n"
+      "student: TOMATIS\n",
+      "\tID:  363\tframe: Deciding\n",
+      "\tID:  198\tframe: Intentionally_act\n",
+      "\tID:  241\tframe: Competition\n",
+      "\tID:  376\tframe: Fairness_evaluation\n",
+      "\tID:  145\tframe: Process_continue\n"
      ]
     }
    ],
@@ -2009,7 +2009,7 @@
     "\n",
     "\n",
     "getFrameSetForStudent('OLIVERio')\n",
-    "getFrameSetForStudent('TOMATIs')\n"
+    "getFrameSetForStudent('TOMATIS')\n"
    ]
   },
   {
@@ -2020,359 +2020,6 @@
     "- bisogna disambiguare gli elementi del frame mappandoli su wordnet manualmente (corpus gold standard)\n",
     "- facciamo fare la stessa cosa ad un programma\n",
     "- valutiamo quanto bene fa il programma rispetto alle nostre annotazioni"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Creazione del contesto - approccio bag of words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deciding_frame = fn.frame_by_name(\"Deciding\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'going', 'im', 'new_york', 'park'}"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import MWETokenizer #tiene conto delle multiword expressions\n",
-    "from nltk.corpus import wordnet as wn\n",
-    "\n",
-    "mwes = [x for x in wn.all_lemma_names() if '_' in x]\n",
-    "mwes = [tuple(x.split('_')) for x in mwes]\n",
-    "tokenizer = MWETokenizer(mwes, separator=' ')\n",
-    "\n",
-    "def make_set(sentence):\n",
-    "    #lowercase\n",
-    "    sentence = sentence.lower()\n",
-    "    #remove punctuation\n",
-    "    sentence = re.sub(r'[^\\w\\s]','',sentence)\n",
-    "    #tokenize\n",
-    "    sentence = tokenizer.tokenize(sentence.split())\n",
-    "    #remove numbers\n",
-    "    sentence = [w for w in sentence if not w.isdigit()]\n",
-    "    #remove stop words\n",
-    "    stop_words = set(stopwords.words('english'))\n",
-    "    sentence = [w for w in sentence if not w in stop_words]\n",
-    "    #lemmatization of definition\n",
-    "    lemmatizer = WordNetLemmatizer()\n",
-    "    sentence = [lemmatizer.lemmatize(w) for w in sentence]\n",
-    "\n",
-    "    #foreach cell in sentence replace space with underscore\n",
-    "    res = []\n",
-    "    for w in sentence:\n",
-    "        res.append(w.replace(' ', '_'))\n",
-    "\n",
-    "    return set(res)\n",
-    "\n",
-    "make_set(\"I'm going to the park of New York.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ctx_frame_FN(frame):\n",
-    "    name = frame.name\n",
-    "    definition = frame.definition\n",
-    "    FEs = frame.FE\n",
-    "    LUs = frame.lexUnit\n",
-    "\n",
-    "    sentence = name + ' ' + definition\n",
-    "    for fe in FEs:\n",
-    "        sentence += ' ' + FEs[fe].definition\n",
-    "    for lu in LUs:\n",
-    "        sentence += ' ' + LUs[lu].definition\n",
-    "\n",
-    "    return make_set(sentence)\n",
-    "\n",
-    "def ctx_frame_element_FN(frame_element):\n",
-    "    name = frame_element.name\n",
-    "    definition = frame_element.definition\n",
-    "    semtype = frame_element.semType.name\n",
-    "\n",
-    "    sentence = name + ' ' + definition + ' ' + semtype\n",
-    "   \n",
-    "    return make_set(sentence)\n",
-    "\n",
-    "def ctx_lexical_unit_FN(lexical_unit):\n",
-    "    name = lexical_unit.name\n",
-    "    definition = lexical_unit.definition.split(':')[1]\n",
-    "    exemplars = lexical_unit.exemplars\n",
-    "    \n",
-    "    sentence = name + ' ' + definition\n",
-    "    for ex in exemplars:\n",
-    "        sentence += ' ' + ex.annotationSet[0].text\n",
-    "\n",
-    "    return make_set(sentence)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creazione contesto FrameNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ctx_FN = {}\n",
-    "\n",
-    "#frame\n",
-    "ctx_FN[deciding_frame.name.replace(' ', '_')] = ctx_frame_FN(deciding_frame)\n",
-    "\n",
-    "#FEs\n",
-    "for fe in deciding_frame.FE:\n",
-    "    ctx_FN[fe.replace(' ', '_')] = ctx_frame_element_FN(deciding_frame.FE[fe])\n",
-    "    break\n",
-    "\n",
-    "#LUs\n",
-    "for lu in deciding_frame.lexUnit:\n",
-    "    ctx_FN[lu.replace(' ', '_')] = ctx_lexical_unit_FN(deciding_frame.lexUnit[lu])\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Creazione contesto WordNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import wordnet as wn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_hyponyms(synset):\n",
-    "    hyponyms = set()\n",
-    "    for hyponym in synset.hyponyms():\n",
-    "        hyponyms |= set(get_hyponyms(hyponym))\n",
-    "    return hyponyms | set(synset.hyponyms())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_sentences(synset, depth=1):\n",
-    "    sentence = synset.definition()\n",
-    "    for example in synset.examples():\n",
-    "        sentence += ' ' + example\n",
-    "    for lemma in synset.lemmas():\n",
-    "        sentence += ' ' + lemma.name()\n",
-    "\n",
-    "    if (depth >= 0):\n",
-    "        for hypernym in synset.hypernyms():\n",
-    "            sentence += ' ' + create_sentences(hypernym, depth-1)\n",
-    "        for hyponym in get_hyponyms(synset):\n",
-    "            sentence += ' ' + create_sentences(hyponym, depth-1)  \n",
-    "\n",
-    "    return sentence\n",
-    "\n",
-    "\n",
-    "def ctx_synset_WN(synset):\n",
-    "    sentence = create_sentences(synset)\n",
-    "    return make_set(sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Deciding': Synset('decision_making.n.01'),\n",
-       " 'decide.v': Synset('decide.v.02'),\n",
-       " 'decision.n': Synset('decision.n.01'),\n",
-       " 'rule_out.v': Synset('rule_out.v.02'),\n",
-       " 'determine.v': Synset('determine.v.02')}"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mappings = {}\n",
-    "for key in ctx_FN:\n",
-    "    token = key.split('.')[0]\n",
-    "    syns = wn.synsets(token)\n",
-    "    max_overlap = 0\n",
-    "    for syn in syns:\n",
-    "        overlap = len(ctx_synset_WN(syn).intersection(ctx_FN[key])) + 1\n",
-    "        if overlap > max_overlap:\n",
-    "            max_overlap = overlap\n",
-    "            mappings[key] = syn\n",
-    "\n",
-    "mappings"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Approccio grafico"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deciding_frame = fn.frame_by_name(\"Deciding\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for fe in deciding_frame.FE:\n",
-    "    ctx_FN[fe.replace(' ', '_')] = ctx_frame_element_FN(deciding_frame.FE[fe])\n",
-    "    break\n",
-    "\n",
-    "#LUs\n",
-    "for lu in deciding_frame.lexUnit:\n",
-    "    ctx_FN[lu.replace(' ', '_')] = ctx_lexical_unit_FN(deciding_frame.lexUnit[lu])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_paths_between_synsets(synset1, synset2, L=3):\n",
-    "    paths = []\n",
-    "    visited = set()\n",
-    "\n",
-    "    def dfs(synset, path):\n",
-    "        if synset in visited or len(path) > L:\n",
-    "            return\n",
-    "        if synset == synset2:\n",
-    "            paths.append(path + [synset])\n",
-    "            return\n",
-    "        visited.add(synset)\n",
-    "        for hypernym in synset.hypernyms():\n",
-    "            dfs(hypernym, path + [synset])\n",
-    "        for hyponym in synset.hyponyms():\n",
-    "            dfs(hyponym, path + [synset])\n",
-    "\n",
-    "    dfs(synset1, [])\n",
-    "    return [path for path in paths if len(path) <= L]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Synset('decision_making.n.01'), Synset('decide.v.01'), Synset('decide.v.02'), Synset('decide.v.03'), Synset('decide.v.04'), Synset('deciding.s.01')]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Synset('decide.v.01')"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def score(syn_FN, word_FN, ctx_FN):\n",
-    "    ctx_word = ctx_FN[word_FN]\n",
-    "\n",
-    "    res = 0\n",
-    "    for word in ctx_word:\n",
-    "        for syn in wn.synsets(word):\n",
-    "            #get all connection path between syn and syn_FN\n",
-    "            paths = list(get_paths_between_synsets(syn, syn_FN, 3))\n",
-    "\n",
-    "            for path in paths:\n",
-    "                res += np.exp(-len(path)-1)\n",
-    "\n",
-    "    return res\n",
-    "\n",
-    "def prob(syn_FN, word_FN, ctx_FN):\n",
-    "    sum = 0\n",
-    "    for key in ctx_FN:\n",
-    "        for syn in wn.synsets(key):\n",
-    "            sum += score(syn, key, ctx_FN)\n",
-    "\n",
-    "    return score(syn_FN, word_FN, ctx_FN) / sum\n",
-    "\n",
-    "def argmax_prob(word_FN, ctx_FN):\n",
-    "    max_prob = 0\n",
-    "    max_syn = None\n",
-    "    for syn in wn.synsets(word_FN):\n",
-    "        prob_syn = prob(syn, word_FN, ctx_FN)\n",
-    "        if prob_syn > max_prob:\n",
-    "            max_prob = prob_syn\n",
-    "            max_syn = syn\n",
-    "            \n",
-    "    return max_syn\n",
-    "\n",
-    "print(wn.synsets('deciding'))\n",
-    "\n",
-    "argmax_prob('Deciding', ctx_FN)"
    ]
   }
  ],
